--- a/css-grid/style.css
+++ b/css-grid/style.css
@@ -1,30 +1,44 @@
 * {
-    padding: 0;
-    margin: 0;
-  }
-  .container {
-    min-height: 100vh;
-    background-color: black;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    gap: 3px;
-  }
-  .item {
-    height: auto;
-    background-color: #bbb;
-    border: 1px solid black;
-  } 
-
-  .item1 { 
-    grid-column: 1/4;
-    grid-row: 1/2;
-  }
-
-.item3{
-    grid-column: 2/4;
-    grid-row: 2/5;
+  padding: 0;
+  margin: 0;
+}
+.container {
+  box-sizing: border-box;
+  min-height: 100vh;
+  background-color: black;
+  display: grid;
+  grid-template-columns: 10%  1fr 1fr;
+  grid-auto-rows: minmax(45px, auto);
+  gap: 3px;
+}
+.item {
+  height: auto;
+  background-color: #bbb;
+  border: 1px solid black;
+}
+.item1 {
+  grid-column: 1/4;
+}
+.item2 {
+  grid-column: 1/2;
+  grid-row: 2/12;
+  padding: 10px;
+}
+.item3 {
+  grid-column: 2/4;
+  grid-row: 2/12;
 }
 .item4 {
+  grid-column: 1/4;
+}
+
+@media (max-width: 768px) {
+  .item2{
     grid-column: 1/4;
+    grid-row: 2/auto;
+  }
+  .item3{
+    grid-column: 1/4;
+    grid-row: 3/auto;
+  }
 }
