--- a/flexbox+grid/style.css
+++ b/flexbox+grid/style.css
@@ -83,7 +83,6 @@ header a {
 }
 
 .main-content{
-    background-color:rgba(0, 0, 255, 0.328);
     grid-column: 1/3;
     grid-row: 2/9;
 }
@@ -128,6 +127,69 @@ header a {
 }
 
 .side-bar{
-    background-color: rgba(0, 128, 0, 0.375);
     grid-row: 2/9;
+}
+
+.side-video{
+    width: 90%;
+    height: 150px;
+    margin: 10px auto;
+    background-color: #bbb;
+}
+
+@media (max-width: 1130px) {
+    .video{
+        width: 90%;
+    }
+    .title{
+        margin-left: 5%;
+    }
+    .linha{
+        width: 90%;
+    }
+    .info-canal{
+        width: 90%;
+    }
+    .interacao{
+        width: 90%;
+    }
+}
+@media (max-width:950px) {
+    .container{
+        grid-template-columns: 1fr 2fr 32%;
+    }
+}
+@media (max-width: 768px) {
+    .main-content{
+        grid-column: 1/4;
+        grid-row: 2/auto;
+    }
+    .side-bar{
+        grid-column: 1/4;
+        grid-row: 3/auto;
+    }
+    .perfil-itens{
+        display: none;
+    }
+    .burguer{
+        display: block;
+    }
+    .search-div{
+        width: 60%;
+    }
+    .search{
+        width: 55%;
+    }
+    .logo{
+        width: 100px;
+    }
+}
+@media (max-width: 416px) {
+    .mic{
+        display: none
+    }
+    .video{
+        width: 95%;
+        height: 200px;
+    }
 }
