--- a/flex-container/layout-teste/style.css
+++ b/flex-container/layout-teste/style.css
@@ -11,16 +11,33 @@
     gap: 0px 15px;
     justify-content: center; 
     align-items: center;
-    flex-wrap: wrap;
+    flex-direction: column;
+    /*flex-wrap: wrap;*/
 }
 
 .item {
     width: 200px;
-    height: 200px;
+    height: 70px;
     border: 2px solid black;
     background-color: white;
     font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.item1{
+    order: 1;
+  align-self: flex-start;
+}
+.item2{
+    order: 2;
+}
+.item3{
+    order: 3;
+}
+
+@media (max-width:390px) {
+    item2{
+        flex: 1 0 620;
+    }
 }
